--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: OpinionShelf
+subtitle: Thoughts|Opinions|Ideas
 description: Thoughts | Ideas | Opinions
 github_username: SatyaSiddharthDash
 # you can comment the below line out if your repo name is not different than your baseurl
